# lotto

./: app.py  simulation.py
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/contracts/: source.sol  source2.sol
everything-solana/sequence-lottery-dapp/: package-lock.json  package.json
everything-solana/sequence-lottery-dapp/src/: App.js
everything-solana/sequential-lottery/: Anchor.toml
everything-solana/sol-dapp/: package-lock.json  package.json  vite.config.js
everything-solana/solana-lottery-frontend/: package-lock.json  package.json  vite.config.js
everything-solana/solana-shit/: solana-dapp.jsx  solana.rs
everything-solana/solana-shitter/: package-lock.json  package.json  vite.config.js
lott-vite/: .env  package-lock.json  package.json  vite.config.js
lott-vite/src/: App.jsx
lotto-app/: CPU.main.1740119808617.cpuprofile  package.json
sequence-lottery-dapp/: package-lock.json  package.json  vite.config.ts
sequence-lottery-dapp/src/: App.tsx  main.tsx  types.ts
sequential-lottery/tests/: sequential-lottery.ts
sol/: Anchor.toml
sol/tests/: sol.ts
solana-lottery/: Anchor.toml
solana-lottery/programs/solana-lottery/: Cargo.toml
solana-lottery/programs/solana-lottery/src/: lib.rs
solana-lottery/tests/: solana-lottery.ts
solana-shit/: old_contract1.rs  solana-dapp.jsx  solana.rs
solana-shitter/: package-lock.json  package.json  vite.config.js
solana-shitter/src/: App.jsx  main.jsx
thirdweb-contract/: hardhat.config.js  package-lock.json  package.json
thirdweb-contract/contracts/: Contract.sol
(+49 files in other folders)
